# mh-practica-03

./: .gitignore  README.md  a.py  assistant.py  docker-compose.yml  o.py
docs/: main.typ
main/: Dockerfile  a.py  requirements.txt
main/charts/: ecg.csv
main/rust/: Cargo.toml
main/rust/src/: lib.rs
main/src/: a.py  api.py  buscar_patrones.py  genetic.py
main/src/algorithm/: pattern.py  pso.py
main/src/tools/: stats.py  utils.py
web/: .env  Dockerfile  config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx
web/src/components/: AppSidebar.tsx  CSVUploader.tsx  Dashboard.tsx  LineChartPlot.tsx  Notification.tsx  PSOParams.tsx  PatternChart.tsx
